Fix gadget interaction tracking
Signed-off-by: Florian Reuth <git@florianreuth.de>